--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <link rel="stylesheet" href="./index.css" />
 </head>
 <body>
-  My awesome website
+  <p>My awesome website</p>
+  <iframe src="https://calendar.google.com/calendar/embed?src=en.german%23holiday%40group.v.calendar.google.com&ctz=Europe/Berlin" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 </body>
