--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
 </head>
 <body>
   <p>My awesome website</p>
-  <iframe src="https://calendar.google.com/calendar/embed?src=en.german%23holiday%40group.v.calendar.google.com&ctz=Europe/Berlin" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+  <iframe src="https://calendar.google.com/calendar/embed?src=en.german%23holiday%40group.v.calendar.google.com&ctz=Europe/Berlin" style="border: 0" width="400" height="300" frameborder="0" scrolling="no"></iframe>
+
+<a href="url">https://www.google.de/maps/@52.473601,15.9948697,5z</a>
 </body>
