--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <link rel="stylesheet" href="./index.css" />
 </head>
 <body>
+  <img src="assets/dummy/Drawing Hacker CoP.png">
   <p>My awesome website</p>
   <iframe src="https://calendar.google.com/calendar/embed?src=en.german%23holiday%40group.v.calendar.google.com&ctz=Europe/Berlin" style="border: 0" width="300" height="225" frameborder="0" scrolling="no"></iframe> <br>
  <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d9954532.028862007!2d15.994869705330995!3d52.473600999031795!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sde!4v1509099732691" width="300" height="225" frameborder="0" style="border:0" allowfullscreen></iframe>
